--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Converter</title>
   </head>
   <body>
-    <div id="root" class="h-screen bg-slate-900"></div>
+    <div id="root" class=""></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
